Random bug fixes, made forms live and working

--- a/html/aboutus.html
+++ b/html/aboutus.html
@@ -92,7 +92,7 @@
 
         <!-- Our Story-->
         <div class="card">
-            <img class="card-img-top" src="../img/our-story-card.jpg" alt="Card image cap">
+            <img class="card-img-top" src="../img/our-story-card.jpg" alt="Card image cap of a dog running down a trail.">
             <div class="card-body">
               <h5 class="card-title">Our Story</h5>
               <p class="card-text">
@@ -355,9 +355,9 @@
                         <p class="footer-text"> Follow us on Facebook and Instagram</p>
                         <p class="footer-text"> for all of the latest Happy Tales news!</p>
                         <div>
-                            <i class="fab fa-facebook-f fa-2x social-icon-fb"></i>
-                            <i class="fab fa-instagram fa-2x social-icon-insta"></i>
-                        </div>
+                          <a href="https://mobile.facebook.com/happytalespetservice/"><i class="fab fa-facebook-f fa-2x social-icon-fb"></i></a>
+                          <a href="https://www.instagram.com/happytalespetservice/"><i class="fab fa-instagram fa-2x social-icon-insta"></i></a>
+                      </div>
                     </div>
                 </div>
             </div>
