--- a/html/faq.html
+++ b/html/faq.html
@@ -282,8 +282,8 @@
                         <p class="footer-text"> Follow us on Facebook and Instagram</p>
                         <p class="footer-text"> for all of the latest Happy Tales news!</p>
                         <div>
-                            <i class="fab fa-facebook-f fa-2x social-icon-fb"></i>
-                            <i class="fab fa-instagram fa-2x social-icon-insta"></i>
+                            <a href="https://mobile.facebook.com/happytalespetservice/"><i class="fab fa-facebook-f fa-2x social-icon-fb"></i></a>
+                            <a href="https://www.instagram.com/happytalespetservice/"><i class="fab fa-instagram fa-2x social-icon-insta"></i></a>
                         </div>
                     </div>
                 </div>
