--- a/html/gallery.html
+++ b/html/gallery.html
@@ -170,7 +170,7 @@
                 <div class="col-md gallery-img">
                     <img src="../img/Gallery/9_Little-Bear.jpg" class="gallery__img-img" alt="Older female dog smiling for the camera."/>
                     <div class="gallery__img-overlay" id="gallery__img-overlay-9">
-                        <h3>Mia</h3>
+                        <h3>Little Bear</h3>
                         <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
                         <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
                         <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
@@ -184,25 +184,25 @@
                 <div class="col-md gallery-img" style="top:-230px;">
                     <img src="../img/Gallery/10_Mia.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
                     <div class="gallery__img-overlay" id="gallery__img-overlay-10">
-                        <h3>Lucy</h3>
+                        <h3>Mia</h3>
                         <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
                         <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
                         <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                     </div>
                 </div>
                 <div class="col-md gallery-img" style="top: -279px;">
-                    <img src="../img/Gallery/11_Cody.jpg" class="gallery__img-img" alt="Male Retriever looking at the carmera."/>
+                    <img src="../img/Gallery/11_Cody.jpg" class="gallery__img-img" alt="Male Golden-Doodle in the store."/>
                     <div class="gallery__img-overlay" id="gallery__img-overlay-11">
-                        <h3>Luke</h3>
+                        <h3>Cody</h3>
                         <p>This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
                         <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
                         <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                     </div>
                 </div>
                 <div class="col-md gallery-img" style="top: -250px;">
-                    <img src="../img/Gallery/12_Fritzy -and-Baby-Bear.jpg" class="gallery__img-img" alt="Older female dog smiling for the camera."/>
+                    <img src="../img/Gallery/12_Fritzy -and-Baby-Bear.jpg" class="gallery__img-img" alt="Two small dogs outside in the snow"/>
                     <div class="gallery__img-overlay" id="gallery__img-overlay-12">
-                        <h3>Mia</h3>
+                        <h3>Fritzy & Baby Bear</h3>
                         <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
                         <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
                         <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
@@ -214,27 +214,27 @@
         <!-- Row 5-->
         <div class="row gallery_row gallery__row-5">
             <div class="col-md gallery-img" style="top:-350px;">
-                <img src="../img/Gallery/13_Gus-and-Cody.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
+                <img src="../img/Gallery/13_Gus-and-Cody.jpg" class="gallery__img-img" alt="Two poodles standing outside their house."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-13">
-                    <h3>Lucy</h3>
+                    <h3>Gus & Cody</h3>
                     <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
                     <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: -369px;">
-                <img src="../img/Gallery/14_Willy.jpg" class="gallery__img-img" alt="Male Retriever looking at the carmera."/>
+                <img src="../img/Gallery/14_Willy.jpg" class="gallery__img-img" alt="Male Chihuahua mix sitting outside."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-14">
-                    <h3>Luke</h3>
+                    <h3>Willy</h3>
                     <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
                     <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: -250px;">
-                <img src="../img/Gallery/15_Boop.jpg" class="gallery__img-img" alt="Older female dog smiling for the camera."/>
+                <img src="../img/Gallery/15_Boop.jpg" class="gallery__img-img" alt="Male Shih Tzu mix dog."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-15">
-                    <h3>Mia</h3>
+                    <h3>Boop</h3>
                     <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
                     <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
@@ -246,27 +246,27 @@
         <!-- Row 6-->
         <div class="row gallery_row gallery__row-6">
             <div class="col-md gallery-img" style="top:-350px;">
-                <img src="../img/Gallery/16_Sassy.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
+                <img src="../img/Gallery/16_Sassy.jpg" class="gallery__img-img" alt="Old female dog standing outside in the snow."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-16">
-                    <h3>Lucy</h3>
+                    <h3>Sassy</h3>
                     <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
                     <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: -750px;">
-                <img src="../img/Gallery/17_Beagle.jpg" class="gallery__img-img" alt="Male Retriever looking at the carmera."/>
+                <img src="../img/Gallery/17_Beagle.jpg" class="gallery__img-img" alt="Male Beagle looking at the camera."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-17">
-                    <h3>Luke</h3>
+                    <h3>Charlie</h3>
                     <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
                     <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: -390px;">
-                <img src="../img/Gallery/18_Porkie.jpg" class="gallery__img-img" alt="Older female dog smiling for the camera."/>
+                <img src="../img/Gallery/18_Porkie.jpg" class="gallery__img-img" alt="Female pet pig in her backyard."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-18">
-                    <h3>Mia</h3>
+                    <h3>Porkie</h3>
                     <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
                     <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
@@ -278,27 +278,27 @@
         <!-- Row 7-->
         <div class="row gallery_row gallery__row-7">
             <div class="col-md gallery-img" style="top:-480px;">
-                <img src="../img/Gallery/19_Samson-Fritzy-and-Baby-Bear.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
+                <img src="../img/Gallery/19_Samson-Fritzy-and-Baby-Bear.jpg" class="gallery__img-img" alt="Great Pyrenees and Pomeranian going for a walk."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-19">
-                    <h3>Lucy</h3>
+                    <h3>Samson & Baby Bear</h3>
                     <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
                     <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: -750px;">
-                <img src="../img/Gallery/20_Lucy-woods.jpg" class="gallery__img-img" alt="Male Retriever looking at the carmera."/>
+                <img src="../img/Gallery/20_Lucy-woods.jpg" class="gallery__img-img" alt="Female collie sitting in the woods."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-20">
-                    <h3>Luke</h3>
+                    <h3>Lucy</h3>
                     <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
                     <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: -405px;">
-                <img src="../img/Gallery/21_Scotty.jpg" class="gallery__img-img" alt="Older female dog smiling for the camera."/>
+                <img src="../img/Gallery/21_Scotty.jpg" class="gallery__img-img" alt="Old male dog looking at the camera."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-21">
-                    <h3>Mia</h3>
+                    <h3>Scotty</h3>
                     <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
                     <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
@@ -310,27 +310,27 @@
         <!-- Row 8-->
         <div class="row gallery_row gallery__row-8">
             <div class="col-md gallery-img" style="top:-630px;">
-                <img src="../img/Gallery/22_CLyde.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
+                <img src="../img/Gallery/22_CLyde.jpg" class="gallery__img-img" alt="Young black cat sitting with wide eyes."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-22">
-                    <h3>Lucy</h3>
+                    <h3>Clyde</h3>
                     <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
                     <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: -800px;">
-                <img src="../img/Gallery/23_Bella-bed.jpg" class="gallery__img-img" alt="Male Retriever looking at the carmera."/>
+                <img src="../img/Gallery/23_Bella-bed.jpg" class="gallery__img-img" alt="Old female dog sitting in her pet bed."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-23">
-                    <h3>Luke</h3>
+                    <h3>Bella</h3>
                     <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
                     <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: -400px;">
-                <img src="../img/Gallery/24_Cookie-and-Little-Bear.jpg" class="gallery__img-img" alt="Older female dog smiling for the camera."/>
+                <img src="../img/Gallery/24_Cookie-and-Little-Bear.jpg" class="gallery__img-img" alt="Two female dogs, one of them is wearing a sweater."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-24">
-                    <h3>Mia</h3>
+                    <h3>Cookie & Little Bear</h3>
                     <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
                     <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
@@ -342,27 +342,27 @@
         <!-- Row 9-->
         <div class="row gallery_row gallery__row-9">
             <div class="col-md gallery-img" style="top:-630px;">
-                <img src="../img/Gallery/25_Mandie.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
+                <img src="../img/Gallery/25_Mandie.jpg" class="gallery__img-img" alt="Beautiful pure-bred Papillon staring majestically into the distance."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-25">
-                    <h3>Lucy</h3>
+                    <h3>Mandie</h3>
                     <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
                     <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: -805px;">
-                <img src="../img/Gallery/26_Luke-and-Sophie.jpg" class="gallery__img-img" alt="Male Retriever looking at the carmera."/>
+                <img src="../img/Gallery/26_Luke-and-Sophie.jpg" class="gallery__img-img" alt="Two white, mid-size dogs getting ready for a walk."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-26">
-                    <h3>Luke</h3>
+                    <h3>Luke & Sophie</h3>
                     <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
                     <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: -420px;">
-                <img src="../img/Gallery/27_Tucker.jpg" class="gallery__img-img" alt="Older female dog smiling for the camera."/>
+                <img src="../img/Gallery/27_Tucker.jpg" class="gallery__img-img" alt="Small old dog in the snow."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-27">
-                    <h3>Mia</h3>
+                    <h3>Tucker</h3>
                     <p>This is Mia! She loves belly rubs, she could soak up the love all day!</p>
                     <small>See why Mia loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
@@ -374,18 +374,18 @@
         <!-- Row 9-->
         <div class="row gallery_row gallery__row-10">
             <div class="col-md gallery-img" style="top:255px;">
-                <img src="../img/Gallery/28_Maverick.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
+                <img src="../img/Gallery/28_Maverick.jpg" class="gallery__img-img" alt="Black and white dog standing on a dirt road.    "/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-28">
-                    <h3>Lucy</h3>
+                    <h3>Maverick</h3>
                     <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
                     <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
                 </div>
             </div>
             <div class="col-md gallery-img" style="top: 0px;">
-                <img src="../img/Gallery/29_Velvet.jpg" class="gallery__img-img" alt="Male Retriever looking at the carmera."/>
+                <img src="../img/Gallery/29_Velvet.jpg" class="gallery__img-img" alt="Small female dog running in a field with a red ball."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-29">
-                    <h3>Luke</h3>
+                    <h3>Velvet</h3>
                     <p style="margin-top: 20px;">This is Teko! Teko is one of six dogs in his family.  All of their high energy helps keep him young!</p>
                     <small>See why Teko loves our visits, set up a Meet & Greet now!</small>
                     <a href="letsmeet.html" class="bttn-float bttn-lg bttn-jumbo overlay-bttn">Let's Meet!</a>
@@ -400,9 +400,9 @@
         <!-- Row 9-->
         <div class="row gallery_row gallery__row-11">
             <div class="col-md gallery-img" style="top:-50px;">
-                <img src="../img/Gallery/31_Ducks.jpg" class="gallery__img-img" alt="Small female dog on her side."/>
+                <img src="../img/Gallery/31_Ducks.jpg" class="gallery__img-img" alt="A couple of ducks playing in a pond."/>
                 <div class="gallery__img-overlay" id="gallery__img-overlay-31">
-                    <h3>Lucy</h3>
+                    <h3>Ducks</h3>
                     <p>This is Lucy! Lucy loves to go for walks out in the woods.</p>
                     <small>See why Lucy loves our walks, set up a Meet & Greet now!</small>
                     <br>
@@ -454,8 +454,8 @@
                         <p class="footer-text"> Follow us on Facebook and Instagram</p>
                         <p class="footer-text"> for all of the latest Happy Tales news!</p>
                         <div>
-                            <i class="fab fa-facebook-f fa-2x social-icon-fb"></i>
-                            <i class="fab fa-instagram fa-2x social-icon-insta"></i>
+                            <a href="https://mobile.facebook.com/happytalespetservice/"><i class="fab fa-facebook-f fa-2x social-icon-fb"></i></a>
+                            <a href="https://www.instagram.com/happytalespetservice/"><i class="fab fa-instagram fa-2x social-icon-insta"></i></a>
                         </div>
                     </div>
                 </div>
