--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div id="heroCarousel" class="carousel slide hero-carousel__wrapper" data-ride="carousel" data-interval="6000" data-pause="false">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100 carousel-item-img" src="img/hero-carousel-1.jpg" alt="First slide">
+              <img class="d-block w-100 carousel-item-img" src="img/hero-carousel-1.jpg" alt="Calico cat laying on the ground playing with a toy.">
               <div class="carousel-caption d-none d-md-block">
                 <div class="hero-carousel__title">
                   <h1>West Branch's <span class="accent">Premier</span> Pet Care Provider</h1>
@@ -78,7 +78,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 carousel-item-img" src="img/hero-carousel-2.jpg" alt="Second slide">
+              <img class="d-block w-100 carousel-item-img" src="img/hero-carousel-2.jpg" alt="Small puppy playing tug-of-war with a white knotted rope.">
               <div class="carousel-caption d-none d-md-block">
                 <div class="hero-carousel__title">
                   <h1>West Branch's <span class="accent">Premier</span> Pet Care Provider</h1>
@@ -92,7 +92,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100 carousel-item-img" src="img/hero-carousel-3.jpg" alt="Third slide">
+              <img class="d-block w-100 carousel-item-img" src="img/hero-carousel-3.jpg" alt="Orange and green bird in a cage.">
               <div class="carousel-caption d-none d-md-block">
                 <div class="hero-carousel__title">
                   <h1>West Branch's <span class="accent">Premier</span> Pet Care Provider</h1>
@@ -173,7 +173,7 @@
               </div>
               <div class="col-md">
                 <div class="d-flex justify-content-center">
-                  <img src="img/walking-the-dog-1.png" alt="Pet Hotel icon with a paw"/>
+                  <img src="img/walking-the-dog-1.png" alt="Icon showing a person walking a dog."/>
                 </div>
                 <h4 class="services__service-title">Pet Sitting</h4> 
                 <p class="services__service-text">
@@ -187,7 +187,7 @@
               </div>
               <div class="col-md">
                 <div class="d-flex justify-content-center">
-                  <img src="img/bunny-icon.png" alt="Pet Hotel icon with a paw"/>
+                  <img src="img/bunny-icon.png" alt="An icon showing the outline of a bunny"/>
                 </div>
                 <h4 class="services__service-title">Other Critters</h4> 
                 <p class="services__service-text">
@@ -306,24 +306,24 @@
               <img src="img/Gallery/Home_2_Fritzy.jpg" alt="Gray-Brown, small male dog smiling at the camera."/>
             </div>
             <div class="col-md mt-5 d-flex justify-content-center">
-              <img src="img/Gallery/Home_3_Cooper.jpg" alt="Gray-Brown, small male dog smiling at the camera."/>
+              <img src="img/Gallery/Home_3_Cooper.jpg" alt="Old male labrador looking at the camera."/>
             </div>
             <div class="col-md mt-5 mr-5 d-flex justify-content-center">
-              <img src="img/Gallery/Home_4_Velvet.jpg" alt="Gray-Brown, small male dog smiling at the camera."/>
+              <img src="img/Gallery/Home_4_Velvet.jpg" alt="Female pointer dog playing with a red ball."/>
             </div>
           </div>
           <div class="row">
             <div class="col-md mt-5 ml-5 mb-5 d-flex justify-content-center">
-              <img src="img/Gallery/Home_5_Cookie.jpg" alt="Black and white female cat looking at camera."/>
+              <img src="img/Gallery/Home_5_Cookie.jpg" alt="Female pit mix smiling happily."/>
             </div>
             <div class="col-md mt-5 mb-5 d-flex justify-content-center">
-              <img src="img/Gallery/Home_6_Samson.jpg" alt="Gray-Brown, small male dog smiling at the camera."/>
+              <img src="img/Gallery/Home_6_Samson.jpg" alt="Male Great Pyrenees dog sitting in the snow."/>
             </div>
             <div class="col-md mt-5 mb-5 d-flex justify-content-center">
-              <img src="img/Gallery/Home_7_Cody.jpg" alt="Gray-Brown, small male dog smiling at the camera."/>
+              <img src="img/Gallery/Home_7_Cody.jpg" alt="Male Golden-Doodle smiling for the camera."/>
             </div>
             <div class="col-md mt-5 mr-5 mb-5 d-flex justify-content-center">
-              <img src="img/Gallery/Home__8_Cat.jpg" alt="Gray-Brown, small male dog smiling at the camera."/>
+              <img src="img/Gallery/Home__8_Cat.jpg" alt="Young kitten staring curiously."/>
             </div>
           </div>
           <div class="d-flex justify-content-center gallery-button">
@@ -374,8 +374,8 @@
                         <p class="footer-text"> Follow us on Facebook and Instagram</p>
                         <p class="footer-text"> for all of the latest Happy Tales news!</p>
                         <div>
-                            <i class="fab fa-facebook-f fa-2x social-icon-fb"></i>
-                            <i class="fab fa-instagram fa-2x social-icon-insta"></i>
+                            <a href="https://mobile.facebook.com/happytalespetservice/"><i class="fab fa-facebook-f fa-2x social-icon-fb"></i></a>
+                            <a href="https://www.instagram.com/happytalespetservice/"><i class="fab fa-instagram fa-2x social-icon-insta"></i></a>
                         </div>
                     </div>
                 </div>
