--- a/html/contact.html
+++ b/html/contact.html
@@ -96,7 +96,7 @@
                     <div class="d-flex justify-content-center"><h3> Message Us </h3></div>
                     <div class="d-flex justify-content-center"><p>Please fill out this form and we will be in touch!</p></div>
                     <div class="get-in-touch__form">
-                        <form>
+                        <form action="https://formspree.io/xqkdwajy" method="POST">
                             <div class="form-group">
                               <label for="inputName">Name</label>
                               <input type="text" class="form-control" id="inputName" name="name" placeholder="First and Last Name" required>
@@ -196,8 +196,8 @@
                         <p class="footer-text"> Follow us on Facebook and Instagram</p>
                         <p class="footer-text"> for all of the latest Happy Tales news!</p>
                         <div>
-                            <i class="fab fa-facebook-f fa-2x social-icon-fb"></i>
-                            <i class="fab fa-instagram fa-2x social-icon-insta"></i>
+                            <a href="https://mobile.facebook.com/happytalespetservice/"><i class="fab fa-facebook-f fa-2x social-icon-fb"></i></a>
+                            <a href="https://www.instagram.com/happytalespetservice/"><i class="fab fa-instagram fa-2x social-icon-insta"></i></a>
                         </div>
                     </div>
                 </div>
